# kozak-tomonoid

./: .gitignore  FLLL-Readme.txt  LICENSE  backing_makefile  install.sh  toomo.js  viewer.html
Tomonoid/: CMakeLists.txt  Tomonoid.kdev4  element.cpp  element_creator.cpp  main.cpp  permutation_try.h  strong_connectivity_finder.cpp  table_element.cpp  tomonoid.cpp  tomonoid.h  tomonoid_assigning.cpp  tomonoid_generating.cpp  tomonoid_reader.cpp  tomonoid_stacked.cpp
examples/: archimedean_fault.txt  to_size_7.txt
ui2/tomonoid_gui/: mainwindow.ui  run_widget.ui  runner_widget.cpp  runner_widget.h  runner_widget.ui  tomonoid_gui.pro
